Fixed icon alignment

--- a/react_webviews/src/dashboard/MyAccount/MyAccount.scss
+++ b/react_webviews/src/dashboard/MyAccount/MyAccount.scss
@@ -287,3 +287,15 @@
     }
   }
 }
+
+
+@media only screen and (max-width: 767px) {
+  .my-account .my-account-content .account .my-account-investment-card {
+    justify-content: space-between;
+    
+    .maic-progress {
+      margin-right: 0;
+      min-width: unset;
+    }
+  }
+}
